k8s/development-remote/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-hub-flapi-frontend-service
  namespace: dev-hub-flapi-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: dev-hub-flapi-frontend
